[gd_scene load_steps=2 format=2]

[ext_resource path="res://popuptest.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="Button" type="Button" parent="VBoxContainer"]
margin_left = 486.0
margin_top = 266.0
margin_right = 538.0
margin_bottom = 286.0
size_flags_horizontal = 4
size_flags_vertical = 4
text = "popup"

[node name="Button2" type="Button" parent="VBoxContainer"]
margin_left = 486.0
margin_top = 290.0
margin_right = 538.0
margin_bottom = 310.0
size_flags_horizontal = 4
size_flags_vertical = 4
text = "popup"

[node name="Button3" type="Button" parent="VBoxContainer"]
margin_left = 486.0
margin_top = 314.0
margin_right = 538.0
margin_bottom = 334.0
size_flags_horizontal = 4
size_flags_vertical = 4
text = "popup"

[node name="PopupPanel" type="PopupPanel" parent="."]
margin_right = 8.0
margin_bottom = 8.0

[node name="VBoxContainer" type="VBoxContainer" parent="PopupPanel"]
visible = false
margin_left = 4.0
margin_top = 4.0
margin_right = 70.0
margin_bottom = 42.0

[node name="Label" type="Label" parent="PopupPanel/VBoxContainer"]
margin_right = 682.0
margin_bottom = 14.0
text = " blah blah "

[node name="poopbutton" type="Button" parent="PopupPanel/VBoxContainer"]
margin_top = 18.0
margin_right = 682.0
margin_bottom = 38.0
text = "poop"

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
margin_left = 472.0
margin_top = 274.0
margin_right = 552.0
margin_bottom = 326.0

[node name="VBoxContainer2" type="VBoxContainer" parent="CenterContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 73.0
margin_bottom = 45.0

[node name="Label" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer2"]
margin_right = 66.0
margin_bottom = 14.0
text = " blah blah "

[node name="closebutton" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer2"]
margin_top = 18.0
margin_right = 66.0
margin_bottom = 38.0
text = "poop"
[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="VBoxContainer/Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="PopupPanel/VBoxContainer/poopbutton" to="." method="_on_poopbutton_pressed"]
[connection signal="pressed" from="CenterContainer/PanelContainer/VBoxContainer2/closebutton" to="." method="_on_closebutton_pressed"]
